--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
@@ -125,17 +125,13 @@ xcopy /y C:\Code\glew-2.1.0\bin\Release\x64\glew32.dll $(TargetDir)</Command>
     <ClCompile Include="OpenGLBackend\private\Primitives\OpenGLPrimitive.cpp" />
     <ClCompile Include="OpenGLBackend\private\Instances\OpenGLSphere.cpp" />
     <ClCompile Include="OpenGLBackend\private\Instances\OpenGLSurface.cpp" />
-    <ClCompile Include="Scene\private\SceneObjectImplementation\SceneSurfaceImpl.cpp" />
-    <ClCompile Include="Scene\private\SceneObjectImplementation\SceneBezierPatchImpl.cpp" />
-    <ClCompile Include="Scene\private\SceneObjectImplementation\SceneSphereImpl.cpp" />
+    <ClCompile Include="OpenGLBackend\private\OpenGLScene.cpp" />
     <ClCompile Include="Style\ColorRGBA.cpp" />
     <ClCompile Include="OpenGLBackend\private\Instances\OpenGLGraphicObject.cpp" />
     <ClCompile Include="OpenGLBackend\private\Instances\OpenGLMeshInstance.cpp" />
-    <ClCompile Include="Scene\private\SceneObjectImplementation\SceneMeshImpl.cpp" />
     <ClCompile Include="OpenGLBackend\private\OpenGLShaderProgram.cpp" />
     <ClCompile Include="OpenGLBackend\private\Primitives\OpenGLMeshPrimitive.cpp" />
     <ClCompile Include="Geometry\BezierPatch.cpp" />
-    <ClCompile Include="Scene\private\SceneObjectImplementation\SceneObjectImpl.cpp" />
     <ClCompile Include="Utilities\Exception.cpp" />
     <ClCompile Include="Utilities\Misc.cpp" />
     <ClCompile Include="OpenGLBackend\OpenGLBackend.cpp" />
@@ -145,7 +141,7 @@ xcopy /y C:\Code\glew-2.1.0\bin\Release\x64\glew32.dll $(TargetDir)</Command>
     <ClCompile Include="Style\ColorRGB.cpp" />
     <ClCompile Include="Geometry\Mesh.cpp" />
     <ClCompile Include="IO\MeshLoader.cpp" />
-    <ClCompile Include="OpenGLBackend\OpenGLUtilities.cpp" />
+    <ClCompile Include="OpenGLBackend\private\OpenGLUtilities.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene\PointLight.cpp" />
     <ClCompile Include="Scene\SceneObjects\SceneObject.cpp" />
@@ -168,21 +164,17 @@ xcopy /y C:\Code\glew-2.1.0\bin\Release\x64\glew32.dll $(TargetDir)</Command>
     <ClInclude Include="OpenGLBackend\private\Primitives\OpenGLPrimitive.h" />
     <ClInclude Include="OpenGLBackend\private\Instances\OpenGLSphere.h" />
     <ClInclude Include="OpenGLBackend\private\Instances\OpenGLSurface.h" />
-    <ClInclude Include="Scene\private\SceneObjectImplementation\SceneSurfaceImpl.h" />
-    <ClInclude Include="Scene\private\SceneObjectImplementation\SceneBezierPatchImpl.h" />
-    <ClInclude Include="Scene\private\SceneObjectImplementation\SceneSphereImpl.h" />
+    <ClInclude Include="OpenGLBackend\private\OpenGLScene.h" />
     <ClInclude Include="Scene\SceneObjects\SceneSurface.h" />
     <ClInclude Include="Scene\SceneObjects\SceneSphere.h" />
     <ClInclude Include="Scene\SceneObjects\SceneBezierPatch.h" />
     <ClInclude Include="Style\ColorRGBA.h" />
     <ClInclude Include="OpenGLBackend\private\Instances\OpenGLGraphicObject.h" />
     <ClInclude Include="OpenGLBackend\private\Instances\OpenGLMeshInstance.h" />
-    <ClInclude Include="Scene\private\SceneObjectImplementation\SceneMeshImpl.h" />
     <ClInclude Include="Scene\SceneObjects\SceneMesh.h" />
     <ClInclude Include="OpenGLBackend\private\OpenGLShaderProgram.h" />
     <ClInclude Include="OpenGLBackend\private\Primitives\OpenGLMeshPrimitive.h" />
     <ClInclude Include="Geometry\BezierPatch.h" />
-    <ClInclude Include="Scene\private\SceneObjectImplementation\SceneObjectImpl.h" />
     <ClInclude Include="Utilities\Exception.h" />
     <ClInclude Include="Utilities\Misc.h" />
     <ClInclude Include="OpenGLBackend\OpenGLBackend.h" />
@@ -194,7 +186,7 @@ xcopy /y C:\Code\glew-2.1.0\bin\Release\x64\glew32.dll $(TargetDir)</Command>
     <ClInclude Include="Math\Vector.h" />
     <ClInclude Include="Geometry\Mesh.h" />
     <ClInclude Include="IO\MeshLoader.h" />
-    <ClInclude Include="OpenGLBackend\OpenGLUtilities.h" />
+    <ClInclude Include="OpenGLBackend\private\OpenGLUtilities.h" />
     <ClInclude Include="Scene\PointLight.h" />
     <ClInclude Include="Scene\SceneObjects\SceneObject.h" />
     <ClInclude Include="Scene\Scene.h" />
