After refactor, patch mostly working, sphere not

--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
@@ -195,12 +195,12 @@ xcopy /y C:\Code\glew-2.1.0\bin\Release\x64\glew32.dll $(TargetDir)</Command>
     <ClInclude Include="WindowsDebugOutputRedirect.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\BezierShaderProgram.glsl" />
-    <None Include="shaders\BezierWireframeShaderProgram.glsl" />
-    <None Include="shaders\BoundingBoxShaderProgram.glsl" />
-    <None Include="shaders\MeshEdgeShaderProgram.glsl" />
-    <None Include="shaders\MeshFaceShaderProgram.glsl" />
-    <None Include="shaders\SphereShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\BezierShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\BezierWireframeShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\BoundingBoxShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\MeshEdgeShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\MeshFaceShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\SphereShaderProgram.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
