--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj.filters
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj.filters
@@ -215,13 +215,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenGLBackend\private\shaders\BoundingBoxShaderProgram.glsl" />
-    <None Include="OpenGLBackend\private\shaders\MeshEdgeShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\MeshFaceShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\BezierFaceShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\BezierEdgeShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\SphereEdgeShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\SphereFaceShaderProgram.glsl" />
-    <None Include="OpenGLBackend\private\shaders\PointsShader.glsl" />
+    <None Include="OpenGLBackend\private\shaders\fixedColor.frag" />
+    <None Include="OpenGLBackend\private\shaders\allTranformations.vert" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
