--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
@@ -187,12 +187,12 @@ xcopy /y C:\Code\glew-2.1.0\bin\Release\x64\glew32.dll $(TargetDir)</Command>
     <ClInclude Include="WindowsDebugOutputRedirect.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="OpenGLBackend\private\shaders\allTranformations.vert" />
     <None Include="OpenGLBackend\private\shaders\BezierFaceShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\BezierEdgeShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\BoundingBoxShaderProgram.glsl" />
-    <None Include="OpenGLBackend\private\shaders\MeshEdgeShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\fixedColor.frag" />
     <None Include="OpenGLBackend\private\shaders\MeshFaceShaderProgram.glsl" />
-    <None Include="OpenGLBackend\private\shaders\PointsShader.glsl" />
     <None Include="OpenGLBackend\private\shaders\SphereEdgeShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\SphereFaceShaderProgram.glsl" />
   </ItemGroup>
