--- a/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
+++ b/OpenGL_test_4.6_a/OpenGL_test_4.6_a.vcxproj
@@ -190,11 +190,13 @@ xcopy /y C:\Code\glew-2.1.0\bin\Release\x64\glew32.dll $(TargetDir)</Command>
     <None Include="OpenGLBackend\private\shaders\allTranformations.vert" />
     <None Include="OpenGLBackend\private\shaders\BezierFaceShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\BezierEdgeShaderProgram.glsl" />
-    <None Include="OpenGLBackend\private\shaders\BoundingBoxShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\boundingBox.geom" />
     <None Include="OpenGLBackend\private\shaders\fixedColor.frag" />
     <None Include="OpenGLBackend\private\shaders\MeshFaceShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\nopVec3.vert" />
     <None Include="OpenGLBackend\private\shaders\SphereEdgeShaderProgram.glsl" />
     <None Include="OpenGLBackend\private\shaders\SphereFaceShaderProgram.glsl" />
+    <None Include="OpenGLBackend\private\shaders\textureOnly.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Todo.txt" />
